app/assets/stylesheets/mdtran.css
/*
css borrowed from http://mixu.net/markdown-styles/jasonm23-markdown and modified
*/

html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }

body{
    color: #444;
    font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
    font-size: small;
    line-height: 1.3em;
    padding: 1em;
    margin: auto;
    max-width: 55em;
    background: #fefefe;
}

a{ color: #0645ad; text-decoration:none;}
a:visited{ color: #0b0080; }
a:hover{ color: #06e; }
a:active{ color:#faa700; }
a:focus{ outline: thin dotted; }
a:hover, a:active{ outline: 0; }

::-moz-selection{background:rgba(255,255,0,0.3);color:#000}
::selection{background:rgba(255,255,0,0.3);color:#000}

a::-moz-selection{background:rgba(255,255,0,0.3);color:#0645ad}
a::selection{background:rgba(255,255,0,0.3);color:#0645ad}

p{
    margin: 1em 0;
}

img{
    max-width: 100%;
}

h1,h2,h3,h4,h5,h6{
    font-weight: normal;
    color: #111;
    line-height: 1em;
}
h4,h5,h6{ font-weight: bold; }
h1{ font-size: 2.5em; }
h2{ font-size: 2em; }
h3{ font-size: 1.5em; }
h4{ font-size: 1.2em; }
h5{ font-size: 1em; }
h6{ font-size: 0.9em; }

blockquote{
    color: #666666;
    margin: 0;
    padding-left: 3em;
    border-left: 0.5em #EEE solid;
}
hr { display: block; height: 2px; border: 0; border-top: 1px solid #aaa;border-bottom: 1px solid #eee; margin: 1em 0; padding: 0; }
pre, code, kbd, samp { color: #000; font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 0.98em; }
pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }

b, strong { font-weight: bold; }

dfn { font-style: italic; }

ins { background: #ff9; color: #000; text-decoration: none; }

mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }

sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
sup { top: -0.5em; }
sub { bottom: -0.25em; }

ul, ol { margin: 1em 0; padding: 0 0 0 2em; }
li p:last-child { margin:0 }
dd { margin: 0 0 0 2em; }

img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }

@media only screen and (min-width: 480px) {
    body{font-size: 14px;}
}

@media only screen and (min-width: 768px) {
    body{font-size: 16px;}
}

@media print {
    * { background: transparent !important; color: black !important; filter: none !important; -ms-filter: none !important; }
    body{font-size:12pt; max-width:100%;}
    a, a:visited { text-decoration: underline; }
    hr { height: 1px; border:0; border-bottom:1px solid black; }
    a[href]:after { content: " (" attr(href) ")"; }
    abbr[title]:after { content: " (" attr(title) ")"; }
    .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }
    pre, blockquote { border: 1px solid #999; padding-right: 1em; page-break-inside: avoid; }
    tr, img { page-break-inside: avoid; }
    img { max-width: 100% !important; }
    @page :left { margin: 15mm 20mm 15mm 10mm; }
    @page :right { margin: 15mm 10mm 15mm 20mm; }
    p, h2, h3 { orphans: 3; widows: 3; }
    h2, h3 { page-break-after: avoid; }
}

#mainHeader {
    margin: 0 0 1em;
    padding-top: 1em;
    color: #808080;
    text-align: center;
}

#mainHeader .logo{
    height: 39px;
    width: 150px;
    vertical-align: middle;
}

#mainHeader .version {
    color: #FF8700;
    position: relative;
    bottom: 0.6em;
    font-size: 0.7em;
    font-weight: 500;
}

#codeTextarea {
    background: #fff url(/assets/shadow.gif) repeat-x top;
    border-bottom: 1px solid #ddd;
    border-left: 1px solid #c3c3c3;
    border-right: 1px solid #c3c3c3;
    border-top: 1px solid #7c7c7c;
    color: #333;
    font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
    font-size: 100%;
    margin: 0;
    width: 99%;
    height: 20em;
}

